# basic_microservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tests.py  utils.py
.github/workflows/: test_and_push.yml
K8S/: pv.yaml  values.yaml
k8s_microservice/: Chart.yaml  values.yaml
k8s_microservice/templates/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
scripts/: pipeline_pytest.sh
src/: main.py  setup.sh  test.py
